# ftw-twitter-bot

./: README.md  pyproject.toml
src/: __main__.py
src/config/: config.py
src/config/files/: local.yml
