[tool.poetry]
name = "ftw-twitter-bot"
version = "0.1.0"
description = "Twitter Bot."
authors = ["Sebastian Wdowiarz"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = "0.27.1"
pyyaml = "6.0.1"
tweepy = "^4.14.0"
boto3 = "1.34.121"


[tool.poetry.group.dev.dependencies]
pre-commit-hooks = "4.5.0"
pre-commit = "3.5.0"

[tool.black]
line-length = 110
target-version = ['py39']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
